# LIT-AlphaFold

./: LIT-AF_Cluster.ipynb  LIT-AlphaFold-Colab.ipynb  LIT-AlphaFold-Colab_Tutorial_Monomer.ipynb  README.md  create_individual_features.py  litaf.def  litaf_env.yaml  run_multimer_jobs.py
.ipynb_checkpoints/: LIT-AlphaFold-Colab-checkpoint.ipynb  LIT-AlphaFold-Colab_Tutorial_Monomer-checkpoint.ipynb
conf/features/: config.yaml
conf/predict/: config.yaml
litaf/: __init__.py  create_input.py  filterpdb.py  objects.py  pipeline.py  predict_structure.py  pyproject.toml  setup.py  utils.py
litaf/litaf/: __init__.py  create_input.py  filterpdb.py  objects.py  pipeline.py  predict_structure.py  rename.py  utils.py
litaf/litaf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
litaf/litaf/alphafold/model/: model.py  modules_multimer.py  utils.py
litaf/src/litaf/: __init__.py  create_input.py  filterpdb.py  objects.py  predict_structure.py  rename.py  utils.py
litaf/src/litaf/alphafold/data/: msa_pairing.py  pipeline.py
queries/: channelsdb.yaml  gpcrdb_g.yaml  gpcrdb_r.yaml  klifs.yaml  rcsb.yaml
tutorials_material/: export_env_variables.sh
tutorials_material/tutorial_1_2/: active_state.yaml  cxcr4.fasta  inactive_state.yaml  input_sequences.fasta  no_vchemokine_filter.yaml  trajectory_frames.cpptraj  vchemokine_filter.yaml
tutorials_material/tutorial_3/: monomer_simple.in  monomer_simple.in.yaml
tutorials_material/tutorial_4/: monomer_annotated.in  monomer_multistate.in  monomer_multistate.in.yaml
tutorials_material/tutorial_5/: multimer.in  (+1 more)
(+10 files in other folders)
